--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -4,7 +4,7 @@
         <div class="lang">
             <h3>&#127760; &nbsp; English(IN)</h3>   
         </div>
-        <div class="currency">
+        <div class="currency mr" >
             <h3>&#8377; &nbsp; INR</h3>
         </div>
     </div>
