create saperate routes in routes folder

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,7 @@
 <body>
     
 
-    <form action="/listing/<%= listing._id %>?_method=PUT" novalidate method="post" class="bg-white p-4 rounded border needs-validation">
+    <form action="/listings/<%= listing._id %>?_method=PUT" novalidate method="post" class="bg-white p-4 rounded border needs-validation">
         <h4 class="mb-4">Edit Listing</h4>
       
         <div class="mb-3">
