--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -11,7 +11,7 @@
         <div class="row g-4">
           <% for (const Listing of allListings) { %>
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <a href="/listing/<%= Listing._id %>" class="text-decoration-none text-dark">
+              <a href="/listings/<%= Listing._id %>" class="text-decoration-none text-dark">
                 <div class="card h-100 shadow-sm border-0 rounded-4 overflow-hidden">
                   <img src="<%= Listing.image %>" class="card-img-top" alt="<%= Listing.title %>" draggable="false" style="height: 200px; object-fit: cover;">
       
