--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -7,7 +7,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6">
         <h3 class="mb-4 text-center">Create a Listing</h3>
-        <form action="/listing" novalidate method="post" class="bg-white p-4 rounded borderv needs-validation">
+        <form action="/listings" novalidate method="post" class="bg-white p-4 rounded borderv needs-validation">
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input type="text" class="form-control" id="title" name="Listing[title]" required>
