--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,11 +27,11 @@
             </div>
 
             <div class="d-flex justify-content-center gap-3 p-3">
-              <form action="/listing/<%= listing._id %>/edit" method="GET">
+              <form action="/listings/<%= listing._id %>/edit" method="GET">
                 <button type="submit" class="btn btn-outline-primary">Edit</button>
               </form>
 
-              <form action="/listing/<%= listing._id %>?_method=DELETE" method="POST"
+              <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST"
                 onsubmit="return confirm('Are you sure you want to delete this listing?');">
                 <button type="submit" class="btn btn-outline-danger">Delete</button>
               </form>
@@ -39,7 +39,7 @@
             <div class="mb-3 mt-3">
               <hr/>
               <h4>Leave a comment</h4>
-              <form action="/listing/<%=listing._id%>/reviews" method="post" novalidate class="needs-validation">
+              <form action="/listings/<%=listing._id%>/reviews" method="post" novalidate class="needs-validation">
                 <div class="mb-3 mt-3">
                   <label for="rating" class="form-label">Rating</label>
                   <input type="range" name="review[rating]" id="rating" step="1" min="1" max="5" class="form-range" >
@@ -78,7 +78,7 @@
                     <%=review.rating%> Stars
                   </div>
                   <!-- <hr> -->
-                  <form action="/listing/<%=listing._id%>/review/<%=review._id%>?_method=DELETE" method="post" class="mt-3">
+                  <form action="/listings/<%=listing._id%>/review/<%=review._id%>?_method=DELETE" method="post" class="mt-3">
                   <button class="btn btn-dark ">Delete</button>
                 </form>
                 </div>
