Add session and flash messages

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -78,7 +78,7 @@
                     <%=review.rating%> Stars
                   </div>
                   <!-- <hr> -->
-                  <form action="/listings/<%=listing._id%>/review/<%=review._id%>?_method=DELETE" method="post" class="mt-3">
+                  <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE" method="post" class="mt-3">
                   <button class="btn btn-dark ">Delete</button>
                 </form>
                 </div>
