--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,6 +13,9 @@
     <!-- <h1>This is my travel website</h1> -->
 
     <div class="container">
+
+        <%- include("../includes/flash.ejs"); %>
+
         <%- body %>
     </div>
 
