--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,7 +13,9 @@
               <h2 class="card-title mb-3 text-center">
                 <%= listing.title %>
               </h2>
+              
               <p class="card-text text-center text-muted mb-2">
+                Owned by : - <i><%= listing.owner.username %></i> : 
                 <%= listing.description %>
               </p>
               <p class="card-text text-center mb-1"><strong>Location:</strong>
@@ -26,6 +28,9 @@
               </p>
             </div>
 
+            <% if (currUser && currUser._id.toString() === listing.owner._id.toString()) { %>
+
+
             <div class="d-flex justify-content-center gap-3 p-3">
               <form action="/listings/<%= listing._id %>/edit" method="GET">
                 <button type="submit" class="btn btn-outline-primary">Edit</button>
@@ -36,14 +41,38 @@
                 <button type="submit" class="btn btn-outline-danger">Delete</button>
               </form>
             </div>
+
+             <% } %>
+             
+             <% if(currUser) {%>
             <div class="mb-3 mt-3">
               <hr/>
-              <h4>Leave a comment</h4>
+              <h4>Leave a Review</h4>
               <form action="/listings/<%=listing._id%>/reviews" method="post" novalidate class="needs-validation">
                 <div class="mb-3 mt-3">
-                  <label for="rating" class="form-label">Rating</label>
-                  <input type="range" name="review[rating]" id="rating" step="1" min="1" max="5" class="form-range" >
-                </div>
+
+                <label for="rating" class="form-label">Rating</label>
+                <fieldset class="starability-slot">
+                    <input 
+                        type="radio" 
+                        id="no-rate" 
+                        class="input-no-rate" 
+                        name="review[rating]" 
+                        value="1" 
+                        checked aria-label="No rating." />
+
+                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                    <label for="first-rate1" title="Terrible">1 star</label>
+                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                    <label for="first-rate2" title="Not good">2 stars</label>
+                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                    <label for="first-rate3" title="Average">3 stars</label>
+                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                    <label for="first-rate4" title="Very good">4 stars</label>
+                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                    <label for="first-rate5" title="Amazing">5 stars</label>
+                </fieldset>
+            </div>
                 <div class="mb-3 mt-3">
                   <label for="comment"  class="form-label">Comment</label>
                   <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
@@ -56,6 +85,7 @@
             
               </form>
             </div>
+            <% } %>
 
           </div>
         </div>
@@ -69,18 +99,20 @@
               <div class="col-lg-4 col-md-6 col-sm-12 mt-3 mb-3  card shadow-sm border-1 rounded-4 overflow-hidden">
               <div class="cards review">
                 <div class="card-body">
-                  <h5 class="card-title">@jhon</h5>
+                  <h5 class="card-title"> <%= review.author ? review.author.username : "Unknown author" %></h5>
                   
-                  <div class="card-text mt-1">
-                    <%= review.comment%>
-                  </div>
-                  <div class="card-text mt-1">
-                    <%=review.rating%> Stars
-                  </div>
+                 <p class="starability-result card-text" data-rating="<%= review.rating %>">
+                            Rated: 3 stars </p>
+                  <p class="card-text">
+                            <%= review.comment %>
+                  </p>
+                  
                   <!-- <hr> -->
+                 <% if (currUser && review.author && review.author._id.toString() === currUser._id.toString()) { %>
                   <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE" method="post" class="mt-3">
-                  <button class="btn btn-dark ">Delete</button>
-                </form>
+                    <button class="btn btn-dark">Delete</button>
+                  </form>
+                <% } %>
                 </div>
               </div>
             </div>
