--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,7 +7,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="card shadow-sm border-0 rounded-4 overflow-hidden">
-            <img src="<%= listing.image %>" class="card-img-top img-fluid" alt="<%= listing.title %>" draggable="false">
+            <img src="<%= listing.image.url %>" class="card-img-top img-fluid" alt="<%= listing.title %>" draggable="false">
 
             <div class="card-body px-4 py-3">
               <h2 class="card-title mb-3 text-center">
