--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,8 +1,6 @@
 <% layout('./layouts/boilerplate') -%>
 
-
   <body>
-
     <div class="container my-5">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -118,9 +116,17 @@
             </div>
             <%}%>
          
-        </div>
 
+        </div>
+        <div class="row justify-content-center">
+            <div id="map"></div>
+        </div>
 
     </div>
 
+    <script src="/js/map.js">
+       
+       
+    </script>
+  
   </body>
