--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,7 @@
 <body>
     
 
-    <form action="/listings/<%= listing._id %>?_method=PUT" novalidate method="post" class="bg-white p-4 rounded border needs-validation">
+    <form action="/listings/<%= listing._id %>?_method=PUT" novalidate method="post" class="bg-white p-4 rounded border needs-validation" enctype="multipart/form-data">
         <h4 class="mb-4">Edit Listing</h4>
       
         <div class="mb-3">
@@ -29,14 +29,17 @@
             please Enter Description 
           </div>
         </div>
-      
-        <div class="mb-3">
-          <label for="image" class="form-label">Image URL</label>
-          <input class="form-control" type="text" id="image" name="Listing[image]" value="<%= listing.image %>" required>
 
-          <div class="invalid-feedback">
-            please Enter a url of your image
-          </div>
+        <div class="mb-3">
+          Original listing image<br>
+         <img src="<%= originalImageUrl %>" alt="" srcset="" >
+        </div>
+
+      
+        <div class="mb-3 "  >
+          <label for="image" class="form-label">Upload New Image</label>
+          <input class="form-control" type="file" id="image" name="Listing[image]"  >
+
         </div>
       
         <div class="mb-3">
