--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -34,7 +34,7 @@
 
           <div class="mb-3">
             <label for="image" class="form-label">Upload Listing Image</label>
-            <input type="file" class="form-control" id="image" name="Listing[image]">
+            <input type="file" class="form-control" id="image" name="Listing[image]" required>
           </div>
 
           <div class="mb-3">
